crates/tree-sitter-command-cad-model/test/corpus/assignment.txt
==================
Assign
==================

 {
    test = 5i;
 } 

---

(source_file
  (expression
    (procedural_block
      (statement
        (assign
          (path
	    (identifier))
          (assignment_operator)
          (expression
            (signed_integer (integer (base_ten)))))))))

==================
Let
==================

{
    let test = 5i; 
}

---

(source_file
  (expression
    (procedural_block
      (statement
        (let
          (path (identifier))
          (expression
            (signed_integer (integer (base_ten)))))))))
