crates/tree-sitter-command-cad-model/test/corpus/comments.txt
==================
Comment
==================

# There's a comment before the code.
()

---

(source_file
  (comment)
  (expression
    (void)))

==================
Comment before closure
==================

# There's a comment before the code.
()[]->std.None {}

---

(source_file
  (comment)
  (expression
    (closure_definition
      (void)
      (closure_captured_variables)
      (path
        (identifier)
        (identifier))
      (expression
        (procedural_block)))))
