crates/tree-sitter-command-cad-model/test/corpus/dictionary_construction.txt
==================
Empty
==================

()

---

(source_file
  (expression
    (dictionary_construction)))

==================
One
==================

(one = a)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_member_assignment
        (identifier)
        (expression
          (identity_path
            (identifier)))))))

==================
One,
==================

(one = a,)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_member_assignment
        (identifier)
        (expression
          (identity_path
            (identifier)))))))

==================
One, two
==================

(one = a, two = b)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_member_assignment
        (identifier)
        (expression
          (identity_path
            (identifier))))
      (dictionary_member_assignment
        (identifier)
        (expression
          (identity_path
            (identifier)))))))

==================
One, two,
==================

(one = a, two = b,)

---

(source_file
  (expression
    (dictionary_construction
      (dictionary_member_assignment
        (identifier)
        (expression
          (identity_path
            (identifier))))
      (dictionary_member_assignment
        (identifier)
        (expression
          (identity_path
            (identifier)))))))
