crates/tree-sitter-command-cad-model/test/corpus/for_loop.txt
==================
For loop
==================

 {
    for x in y {}
 } 

---

(source_file
  (expression
    (procedural_block
      (statement
        (for
          (identifier)
          (expression
            (path
              (identifier)))
          (procedural_block))))))

==================
For with void
==================

 {
    for x in ~ {}
 } 

---

(source_file
  (expression
    (procedural_block
      (statement
        (for
          (identifier)
          (expression
            (void))
          (procedural_block))))))
