crates/tree-sitter-command-cad-model/test/corpus/list.txt
==================
Empty
==================

[]

---

(source_file
  (expression
    (list)))

==================
Single
==================

[this,]

---

(source_file
  (expression
    (list
      (expression
        (path
          (identifier))))))

==================
Multi
==================

[this, is, a, test]

---

(source_file
  (expression
    (list
      (expression
        (path
          (identifier)))
      (expression
        (path
          (identifier)))
      (expression
        (path
          (identifier)))
      (expression
        (path
          (identifier))))))

==================
Multi with comma at the end
==================

[this, is, a, test,]

---

(source_file
  (expression
    (list
      (expression
        (path
          (identifier)))
      (expression
        (path
          (identifier)))
      (expression
        (path
          (identifier)))
      (expression
        (path
          (identifier))))))
